--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "axios": "^0.19.0",
+    "vue": "^2.5.2",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.0.18"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
